k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: neuraxcrm-service
  labels:
    app: neuraxcrm-platform
spec:
  type: ClusterIP
  selector:
    app: neuraxcrm-platform
  ports:
    - name: http
      port: 80
      targetPort: http
