k8s/ingress.example.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: neuraxcrm-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
    - host: crm.neurax.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: neuraxcrm-service
                port:
                  name: http
  tls:
    - hosts:
        - crm.neurax.com.br
      secretName: neuraxcrm-tls
